--- a/8-Cleaning/cleaning.ipynb
+++ b/8-Cleaning/cleaning.ipynb
@@ -23,15 +23,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-12T16:52:47.973238Z",
-     "iopub.status.busy": "2022-12-12T16:52:47.972998Z",
-     "iopub.status.idle": "2022-12-12T16:52:49.880682Z",
-     "shell.execute_reply": "2022-12-12T16:52:49.879462Z",
-     "shell.execute_reply.started": "2022-12-12T16:52:47.973213Z"
-    }
+     "iopub.execute_input": "2022-12-28T20:31:01.498485Z",
+     "iopub.status.busy": "2022-12-28T20:31:01.498212Z",
+     "iopub.status.idle": "2022-12-28T20:31:03.423936Z",
+     "shell.execute_reply": "2022-12-28T20:31:03.422801Z",
+     "shell.execute_reply.started": "2022-12-28T20:31:01.498453Z"
+    },
+    "tags": []
    },
    "outputs": [
     {
@@ -562,8 +563,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-12-28T20:31:15.903858Z",
+     "iopub.status.busy": "2022-12-28T20:31:15.903573Z",
+     "iopub.status.idle": "2022-12-28T20:31:23.434523Z",
+     "shell.execute_reply": "2022-12-28T20:31:23.433508Z",
+     "shell.execute_reply.started": "2022-12-28T20:31:15.903826Z"
+    },
     "tags": []
    },
    "outputs": [],
@@ -579,14 +587,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 19,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-19T16:49:16.340501Z",
-     "iopub.status.busy": "2022-12-19T16:49:16.340248Z",
-     "iopub.status.idle": "2022-12-19T16:49:19.803713Z",
-     "shell.execute_reply": "2022-12-19T16:49:19.802830Z",
-     "shell.execute_reply.started": "2022-12-19T16:49:16.340476Z"
+     "iopub.execute_input": "2023-01-03T19:44:18.420895Z",
+     "iopub.status.busy": "2023-01-03T19:44:18.420540Z",
+     "iopub.status.idle": "2023-01-03T19:44:19.928147Z",
+     "shell.execute_reply": "2023-01-03T19:44:19.927490Z",
+     "shell.execute_reply.started": "2023-01-03T19:44:18.420858Z"
     },
     "tags": []
    },
@@ -594,12 +602,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0e5f32d71e264293adb16c3fbd6b5cde",
+       "model_id": "de2be803019449c680c87b25d4842586",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "MitoWidget(analysis_data_json='{\"analysisName\": \"id-slcljxjpla\", \"analysisToReplay\": {\"analysisName\": \"id-roly…"
+       "MitoWidget(analysis_data_json='{\"analysisName\": \"id-yxujtzyhhe\", \"analysisToReplay\": {\"analysisName\": \"id-roly…"
       ]
      },
      "metadata": {},
@@ -659,14 +667,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-13T19:30:37.229935Z",
-     "iopub.status.busy": "2022-12-13T19:30:37.229580Z",
-     "iopub.status.idle": "2022-12-13T19:30:37.606736Z",
-     "shell.execute_reply": "2022-12-13T19:30:37.605676Z",
-     "shell.execute_reply.started": "2022-12-13T19:30:37.229896Z"
+     "iopub.execute_input": "2022-12-28T20:32:57.741042Z",
+     "iopub.status.busy": "2022-12-28T20:32:57.740580Z",
+     "iopub.status.idle": "2022-12-28T20:32:58.100530Z",
+     "shell.execute_reply": "2022-12-28T20:32:58.099375Z",
+     "shell.execute_reply.started": "2022-12-28T20:32:57.740987Z"
     },
     "tags": []
    },
@@ -677,15 +685,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 17,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-13T19:33:17.728228Z",
-     "iopub.status.busy": "2022-12-13T19:33:17.727932Z",
-     "iopub.status.idle": "2022-12-13T19:33:19.234135Z",
-     "shell.execute_reply": "2022-12-13T19:33:19.233303Z",
-     "shell.execute_reply.started": "2022-12-13T19:33:17.728199Z"
-    }
+     "iopub.execute_input": "2022-12-28T20:50:45.645568Z",
+     "iopub.status.busy": "2022-12-28T20:50:45.645199Z",
+     "iopub.status.idle": "2022-12-28T20:50:56.985021Z",
+     "shell.execute_reply": "2022-12-28T20:50:56.984138Z",
+     "shell.execute_reply.started": "2022-12-28T20:50:45.645527Z"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "df.to_csv('/home/jovyan/ODBiz/8-Cleaning/Not_QC.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-12-28T20:42:10.107857Z",
+     "iopub.status.busy": "2022-12-28T20:42:10.107568Z",
+     "iopub.status.idle": "2022-12-28T20:42:11.247601Z",
+     "shell.execute_reply": "2022-12-28T20:42:11.245965Z",
+     "shell.execute_reply.started": "2022-12-28T20:42:10.107827Z"
+    },
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -694,15 +721,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 10,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-19T16:49:07.521232Z",
-     "iopub.status.busy": "2022-12-19T16:49:07.520968Z",
-     "iopub.status.idle": "2022-12-19T16:49:08.089843Z",
-     "shell.execute_reply": "2022-12-19T16:49:08.088634Z",
-     "shell.execute_reply.started": "2022-12-19T16:49:07.521205Z"
-    }
+     "iopub.execute_input": "2022-12-28T20:42:13.463887Z",
+     "iopub.status.busy": "2022-12-28T20:42:13.463610Z",
+     "iopub.status.idle": "2022-12-28T20:42:13.667634Z",
+     "shell.execute_reply": "2022-12-28T20:42:13.666725Z",
+     "shell.execute_reply.started": "2022-12-28T20:42:13.463858Z"
+    },
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -852,6 +880,112 @@
    ],
    "source": [
     "df['longitude'].count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-12-28T20:50:36.016623Z",
+     "iopub.status.busy": "2022-12-28T20:50:36.016315Z",
+     "iopub.status.idle": "2022-12-28T20:50:37.248449Z",
+     "shell.execute_reply": "2022-12-28T20:50:37.247447Z",
+     "shell.execute_reply.started": "2022-12-28T20:50:36.016589Z"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "df['full_address'] = df['street_name'].str.title()\n",
+    "df['business_name'] = df['business_name'].str.title()\n",
+    "df['alt_business_name'] = df['alt_business_name'].str.title()\n",
+    "df['business_sector'] = df['business_sector'].str.title()\n",
+    "df['business_subsector'] = df['business_subsector'].str.title()\n",
+    "df['country'] = df['country'].str.title()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-01-03T19:43:50.816667Z",
+     "iopub.status.busy": "2023-01-03T19:43:50.816391Z",
+     "iopub.status.idle": "2023-01-03T19:44:06.698855Z",
+     "shell.execute_reply": "2023-01-03T19:44:06.697846Z",
+     "shell.execute_reply.started": "2023-01-03T19:43:50.816638Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "agri = '11.0'\n",
+    "mining = '21.0'\n",
+    "uti = '22.0'\n",
+    "cons = '23.0'\n",
+    "mani = '31.0'\n",
+    "man = '32.0'\n",
+    "manu = '33.0'\n",
+    "whole = '41.0'\n",
+    "whol = '42.0'\n",
+    "retail = '44.0'\n",
+    "retai = '45.0'\n",
+    "trans = '48.0'\n",
+    "tran = '49.0'\n",
+    "info = '51.0'\n",
+    "fin = '52.0'\n",
+    "real = '53.0'\n",
+    "prof = '54.0'\n",
+    "mang = '55.0'\n",
+    "admin = '56.0'\n",
+    "edu = '61.0'\n",
+    "health = '62.0'\n",
+    "arts = '71.0'\n",
+    "acco = '72.0'\n",
+    "other = '81.0'\n",
+    "pub = '91.0'\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "df.loc[df['NAICS_Group'].str.contains(agri, case= False, na= False), 'NAICS']= 11.0\n",
+    "df.loc[df['NAICS_Group'].str.contains(mining, case = False, na = False), 'NAICS' ] = 21.0\n",
+    "df.loc[df['NAICS_Group'].str.contains(uti, case = False, na = False), 'NAICS' ] = 22.0\n",
+    "df.loc[df['NAICS_Group'].str.contains(cons, case = False, na = False), 'NAICS' ] = 23.0\n",
+    "df.loc[df['NAICS_Group'].str.contains(mani, case = False, na = False), 'NAICS' ] = 31.0\n",
+    "df.loc[df['NAICS_Group'].str.contains(man, case = False, na = False), 'NAICS' ] = 32.0\n",
+    "df.loc[df['NAICS_Group'].str.contains(manu, case = False, na = False), 'NAICS' ] = 33.0\n",
+    "df.loc[df['NAICS_Group'].str.contains(whole, case = False, na = False), 'NAICS' ] = 41.0\n",
+    "df.loc[df['NAICS_Group'].str.contains(whol, case = False, na = False), 'NAICS' ] = 42.0\n",
+    "df.loc[df['NAICS_Group'].str.contains(retail, case = False, na = False), 'NAICS' ] = 44.0\n",
+    "df.loc[df['NAICS_Group'].str.contains(retai, case = False, na = False), 'NAICS' ] = 45.0\n",
+    "df.loc[df['NAICS_Group'].str.contains(trans, case = False, na = False), 'NAICS' ] = 48.0\n",
+    "df.loc[df['NAICS_Group'].str.contains(tran, case = False, na = False), 'NAICS' ] = 49.0\n",
+    "df.loc[df['NAICS_Group'].str.contains(info, case = False, na = False), 'NAICS' ] = 51.0\n",
+    "df.loc[df['NAICS_Group'].str.contains(fin, case = False, na = False), 'NAICS' ] = 52.0\n",
+    "df.loc[df['NAICS_Group'].str.contains(real, case = False, na = False), 'NAICS' ] = 53.0\n",
+    "df.loc[df['NAICS_Group'].str.contains(prof, case = False, na = False), 'NAICS' ] = 54.0\n",
+    "df.loc[df['NAICS_Group'].str.contains(mang, case = False, na = False), 'NAICS' ] = 55.0\n",
+    "df.loc[df['NAICS_Group'].str.contains(admin, case = False, na = False), 'NAICS' ] = 56.0\n",
+    "df.loc[df['NAICS_Group'].str.contains(edu, case = False, na = False), 'NAICS' ] = 61.0\n",
+    "df.loc[df['NAICS_Group'].str.contains(health, case = False, na = False), 'NAICS' ] = 62.0\n",
+    "df.loc[df['NAICS_Group'].str.contains(arts, case = False, na = False), 'NAICS' ] = 71.0\n",
+    "df.loc[df['NAICS_Group'].str.contains(acco, case = False, na = False), 'NAICS' ] = 72.0\n",
+    "df.loc[df['NAICS_Group'].str.contains(other, case = False, na = False), 'NAICS' ] = 81.0\n",
+    "df.loc[df['NAICS_Group'].str.contains(pub, case = False, na = False), 'NAICS' ] = 91.0\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "df.to_csv('/home/jovyan/ODBiz/8-Cleaning/Not_QC.csv', index=False)"
    ]
   },
   {
