cleaning and deduplication

--- a/8-Cleaning/validation.ipynb
+++ b/8-Cleaning/validation.ipynb
@@ -57,17 +57,292 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-02-07T16:23:45.224470Z",
+     "iopub.status.busy": "2023-02-07T16:23:45.224209Z",
+     "iopub.status.idle": "2023-02-07T16:23:55.004633Z",
+     "shell.execute_reply": "2023-02-07T16:23:55.003973Z",
+     "shell.execute_reply.started": "2023-02-07T16:23:45.224419Z"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "#creating csv only containng lats/lons\n",
+    "\n",
+    "# importing package\n",
+    "import pandas as pd\n",
+    "import random\n",
+    "import csv\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "# file paths\n",
+    "filename = '/home/jovyan/ODBiz/8-Cleaning/Not_QC.csv' #file to read in \n",
+    "newfile = '/home/jovyan/ODBiz/8-Cleaning/filtered.csv'  # outputted new file \n",
+    "\n",
+    "\n",
+    "\n",
+    "# filtering original merging csv \n",
+    "data = pd.read_csv(filename, low_memory=False)                             # read the file in as a csv file\n",
+    "data = pd.DataFrame(data)                                                  # turn it into a data frame \n",
+    "data = data.loc[(data['latitude'] > 0 ) & (data['longitude'] < 0 ) ]       # filter so that it only contains the rows with lat/long info \n",
+    "\n",
+    "data.to_csv(newfile, index=False)                                          # save new data frame as a csv  \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-02-07T17:04:32.494701Z",
+     "iopub.status.busy": "2023-02-07T17:04:32.494449Z",
+     "iopub.status.idle": "2023-02-07T17:04:41.117193Z",
+     "shell.execute_reply": "2023-02-07T17:04:41.116514Z",
+     "shell.execute_reply.started": "2023-02-07T17:04:32.494685Z"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "data = pd.read_csv('/home/jovyan/ODBiz/8-Cleaning/filtered.csv', low_memory=False)\n",
+    "half_df = len(data) // 2\n",
+    "\n",
+    "#first_half = df.iloc[:half_df,]\n",
+    "\n",
+    "df1 = data.iloc[:, :half_df]\n",
+    "df2 = data.iloc[:, half_df:]\n",
+    "\n",
+    "\n",
+    "df1.to_csv('/home/jovyan/ODBiz/8-Cleaning/first_half.csv', index=False) \n",
+    "df2.to_csv('/home/jovyan/ODBiz/8-Cleaning/second_half.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-02-07T17:05:01.660820Z",
+     "iopub.status.busy": "2023-02-07T17:05:01.660583Z",
+     "iopub.status.idle": "2023-02-07T17:12:48.679674Z",
+     "shell.execute_reply": "2023-02-07T17:12:48.678963Z",
+     "shell.execute_reply.started": "2023-02-07T17:05:01.660804Z"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "import folium\n",
+    "import pandas as pd\n",
+    "from folium.plugins import FastMarkerCluster\n",
+    "\n",
+    "\n",
+    "data = pd.read_csv(\"/home/jovyan/ODBiz/8-Cleaning/first_half.csv\", low_memory=False)\n",
+    "\n",
+    "#create a map\n",
+    "this_map = folium.Map(prefer_canvas=True)\n",
+    "\n",
+    "#this_map.add_child(FastMarkerCluster(data[['latitude', 'longitude']].values.tolist()))\n",
+    "\n",
+    "def plotDot(point):\n",
+    "    '''input: series that contains a numeric named latitude and a numeric named longitude\n",
+    "    this function creates a CircleMarker and adds it to your this_map'''\n",
+    "    \n",
+    "    folium.CircleMarker(location=[point.latitude, point.longitude],\n",
+    "    #folium.add_child(FastMarkerCluster(location=[point.latitude, point.longitude],\n",
+    "                        weight=5,\n",
+    "                        radius=2,\n",
+    "                        color = 'magenta',\n",
+    "                        tooltip = point['business_name'],\n",
+    "                        popup = point['business_name']).add_to(this_map)\n",
+    "\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    #my_map.add_child(FastMarkerCluster(samples[['latitude', 'longitude']].values.tolist()))\n",
+    "    \n",
+    "#use df.apply(,axis=1) to \"iterate\" through every row in your dataframe\n",
+    "try: \n",
+    "    data.apply(plotDot, axis = 1)\n",
+    "except:\n",
+    "    pass\n",
+    "\n",
+    "\n",
+    "#this_map.add_child(FastMarkerCluster(data[['latitude', 'longitude']].values.tolist()))\n",
+    "\n",
+    "#Set the zoom to the maximum possible\n",
+    "this_map.fit_bounds(this_map.get_bounds())\n",
+    "\n",
+    "#Save the map to an HTML file\n",
+    "this_map.save('/home/jovyan/ODBiz/8-Cleaning/folium_map_test.html')\n",
+    "\n",
+    "\n",
+    "# ****** TO VIEW MAP, RIGHT CLICK THE HTML FILE AND OPEN IN NEW BROWSER TAB *******"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-02-06T22:23:49.256222Z",
+     "iopub.status.busy": "2023-02-06T22:23:49.255965Z",
+     "iopub.status.idle": "2023-02-06T22:31:26.624701Z",
+     "shell.execute_reply": "2023-02-06T22:31:26.624190Z",
+     "shell.execute_reply.started": "2023-02-06T22:23:49.256172Z"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "import folium\n",
+    "import pandas as pd\n",
+    "\n",
+    "data = pd.read_csv(\"/home/jovyan/ODBiz/8-Cleaning/filtered.csv\", low_memory=False)\n",
+    "\n",
+    "#create a map\n",
+    "this_map = folium.Map(prefer_canvas=True)\n",
+    "\n",
+    "def plotDot(point):\n",
+    "    '''input: series that contains a numeric named latitude and a numeric named longitude\n",
+    "    this function creates a CircleMarker and adds it to your this_map'''\n",
+    "    folium.CircleMarker(location=[point.latitude, point.longitude],\n",
+    "                        weight=5,\n",
+    "                        radius=2,\n",
+    "                        color = 'magenta',\n",
+    "                        tooltip = point['business_name'],\n",
+    "                        popup = point['business_name']).add_to(this_map)\n",
+    "\n",
+    "#use df.apply(,axis=1) to \"iterate\" through every row in your dataframe\n",
+    "try: \n",
+    "    data.apply(plotDot, axis = 1)\n",
+    "except:\n",
+    "    pass\n",
+    "\n",
+    "#Set the zoom to the maximum possible\n",
+    "this_map.fit_bounds(this_map.get_bounds())\n",
+    "\n",
+    "#Save the map to an HTML file\n",
+    "this_map.save('/home/jovyan/ODBiz/8-Cleaning/folium_map_test.html')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\"\"\"\n",
+    "Fixes errors revealed bby validate.py\n",
+    "Identified errors:\n",
+    "    1. move \"unit\" in postal code to unit\n",
+    "    2. Postal Code:\n",
+    "        - replace - with \"\"\n",
+    "        - replace \\xa0 with non-breaking space (utf-8 encoding)\n",
+    "        - remove \"MB\" or \"mb\" or \"manitoba\" or \"bonnet\" from start, if exists\n",
+    "        - ensure upper case\n",
+    "\"\"\"\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import re\n",
+    "\n",
+    "df = pd.read_csv(\"4_filled.csv\", encoding = \"utf-8-sig\")\n",
+    "\n",
+    "######\n",
+    "# 1.\n",
+    "######\n",
+    "# get units and boxes\n",
+    "def split_unit(x):\n",
+    "    if \"-\" in str(x):\n",
+    "        print(x, str(x).split('-')[0])\n",
+    "        return str(x).split('-')[0]\n",
+    "    else:\n",
+    "        return np.nan\n",
+    "\n",
+    "def split_street_no(x):\n",
+    "    if \"-\" in str(x):\n",
+    "        print(x, str(x).split('-')[1])\n",
+    "        return str(x).split('-')[1]\n",
+    "    else:\n",
+    "        return x\n",
+    "\n",
+    "\n",
+    "df.unit = np.nan\n",
+    "\n",
+    "df['temp_unit'] = df.street_no.map(split_unit)\n",
+    "df['temp_unit_2'] = df['postal_code'].str.extract(r'([uU]nit.*[0-9]{1,})', expand=False)\n",
+    "df['temp_unit_3'] = df.street_name.str.extract(r'([bB]ox.*[0-9]{1,})', expand=False)\n",
+    "\n",
+    "df.unit.fillna(df.temp_unit, inplace=True)\n",
+    "df.unit.fillna(df.temp_unit_2, inplace=True)\n",
+    "df.unit.fillna(df.temp_unit_3, inplace=True)\n",
+    "\n",
+    "# remove unit and boxes from other cols\n",
+    "df['street_no']=df.street_no.map(split_street_no)\n",
+    "df['street_name']=df['street_name'].str.replace(r'[bB]ox.*[0-9]{1,}', '', regex=True)\n",
+    "df['postal_code']=df['postal_code'].str.replace(r'[uU]nit.*[0-9]{1,}', '', regex=True)\n",
+    "print(df.unit.unique())\n",
+    "\n",
+    "\n",
+    "######\n",
+    "# 2.\n",
+    "######\n",
+    "# replace dashes and \\xa0\n",
+    "df['postal_code'] = df.postal_code.str.replace(\"-\", \"\")\n",
+    "df['postal_code'] = df.postal_code.str.replace(\"\\xa0\", \"\")\n",
+    "\n",
+    "# remove prefixes from pcs that start with it\n",
+    "# df.postal_code = df.postal_code.str.strip(',')\n",
+    "\n",
+    "def rmv_prefix(x):\n",
+    "    if x not in [None, np.nan]:\n",
+    "        \n",
+    "        if x.startswith((\"MB\", \"mb\")):\n",
+    "            return x[2::]\n",
+    "        elif x.startswith(\"manitoba\"):\n",
+    "            return x.replace(\"manitoba\", \"\")\n",
+    "        elif x.startswith(\"bonnet\"):\n",
+    "            return x.replace(\"bonnet\", \"\")\n",
+    "        else:\n",
+    "            return x\n",
+    "    else:\n",
+    "        return x\n",
+    "    \n",
+    "df['postal_code'] = df.postal_code.map(rmv_prefix)\n",
+    "\n",
+    "def length_6(x):\n",
+    "    \"\"\"\n",
+    "    Replaces postal codes that are not 3 or 6 characters in length with None.\n",
+    "    \"\"\"\n",
+    "    if x not in [None, np.nan] and len(str(x).replace(\" \", \"\").strip()) != 6:\n",
+    "        if len(str(x.strip())) != 3:\n",
+    "            print(f\"Replacing {x, len(x)} with None\")\n",
+    "            return None\n",
+    "    else:\n",
+    "        return str(x).replace(\" \", \"\").strip()\n",
+    "    \n",
+    "df['postal_code'] = df.postal_code.map(length_6)\n",
+    "\n",
+    "# Ensure upper case\n",
+    "df.postal_code = df.postal_code.str.upper()\n",
+    "\n",
+    "\n",
+    "# export\n",
+    "df.to_csv(\"5_cleaned.csv\", encoding=\"utf-8-sig\", index=False)\n",
+    "df.loc[df.latitude.isna()].to_csv(\"6_missing_coord.csv\", encoding=\"utf-8-sig\")\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:odbiz]",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-odbiz-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -79,7 +354,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.15"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
