--- a/5a-Matching/matching_nar.ipynb
+++ b/5a-Matching/matching_nar.ipynb
@@ -349,9 +349,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:odbiz]",
+   "display_name": "Python [conda env:root] *",
    "language": "python",
-   "name": "conda-env-odbiz-py"
+   "name": "conda-root-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -363,7 +363,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.15"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
