--- a/9-Analysis/Count_Analysis.ipynb
+++ b/9-Analysis/Count_Analysis.ipynb
@@ -2,140 +2,116 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-11-29T16:40:28.408603Z",
-     "iopub.status.busy": "2022-11-29T16:40:28.408300Z",
-     "iopub.status.idle": "2022-11-29T16:40:40.704439Z",
-     "shell.execute_reply": "2022-11-29T16:40:40.703442Z",
-     "shell.execute_reply.started": "2022-11-29T16:40:28.408527Z"
-    }
+     "iopub.execute_input": "2023-03-01T18:33:48.847198Z",
+     "iopub.status.busy": "2023-03-01T18:33:48.846444Z",
+     "iopub.status.idle": "2023-03-01T18:33:51.172107Z",
+     "shell.execute_reply": "2023-03-01T18:33:51.171283Z",
+     "shell.execute_reply.started": "2023-03-01T18:33:48.847177Z"
+    },
+    "tags": []
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "There are a total of 803491 unique rows in this dataset\n",
-      "There are a total of 30 unique rows in NAICS_Total\n",
+      "There are a total of 460925 unique rows in this dataset\n",
+      "There are a total of 396131 rows in derived_NAICS\n",
+      "There are a total of 108578 rows in source_NAICS_primary\n",
+      "That means that we found a total of 287553 NAICS codes ourselves\n",
+      "That means that we are missing a total of 64794 NAICS codes\n",
       "Total businesses count by province\n",
       "province\n",
-      "78                       1\n",
-      "AB                   77097\n",
-      "BC                  232465\n",
-      "LAKEVIEW ESTATES         1\n",
-      "MB                     224\n",
-      "NB                     155\n",
-      "NL                      33\n",
-      "NS                      46\n",
-      "NT                    1563\n",
-      "NU                     223\n",
-      "ON                  243590\n",
-      "PE                       5\n",
-      "QC                  244527\n",
-      "SK                     168\n",
-      "YT                      13\n",
+      "AB     76981\n",
+      "BC    174222\n",
+      "MB       216\n",
+      "NB       153\n",
+      "NL        32\n",
+      "NS        44\n",
+      "NT      1556\n",
+      "NU       223\n",
+      "ON    207308\n",
+      "PE         5\n",
+      "SK       164\n",
+      "YT        11\n",
       "Name: idx, dtype: int64\n",
-      "How many provinces per NAICS_total\n",
+      "How many total NAICS in each province\n",
       "province\n",
-      "78                       1\n",
-      "AB                   65432\n",
-      "BC                  173081\n",
-      "LAKEVIEW ESTATES         1\n",
-      "MB                     206\n",
-      "NB                     106\n",
-      "NL                      30\n",
-      "NS                      45\n",
-      "NT                     873\n",
-      "NU                      50\n",
-      "ON                  155654\n",
-      "PE                       5\n",
-      "QC                    6794\n",
-      "SK                     153\n",
-      "YT                      10\n",
-      "Name: NAICS_total, dtype: int64\n",
-      "how many provinces per accurate NAICS \n",
+      "AB     66554\n",
+      "BC    141201\n",
+      "MB       204\n",
+      "NB       105\n",
+      "NL        30\n",
+      "NS        43\n",
+      "NT       870\n",
+      "NU        50\n",
+      "ON    186900\n",
+      "PE         5\n",
+      "SK       154\n",
+      "YT         9\n",
+      "Name: derived_NAICS, dtype: int64\n",
+      "how many given NAICS in each Province \n",
       "province\n",
-      "78                      0\n",
-      "AB                   2615\n",
-      "BC                  38896\n",
-      "LAKEVIEW ESTATES        0\n",
-      "MB                    158\n",
-      "NB                     31\n",
-      "NL                     28\n",
-      "NS                     35\n",
-      "NT                     99\n",
-      "NU                     48\n",
-      "ON                  82148\n",
-      "PE                      3\n",
-      "QC                    276\n",
-      "SK                    110\n",
-      "YT                      6\n",
-      "Name: NAICS, dtype: int64\n",
-      "Accurate NAICS count by Province \n",
-      "NAICS\n",
-      "0.0       110\n",
-      "1.0        16\n",
-      "11.0     1154\n",
-      "21.0      170\n",
-      "22.0      162\n",
-      "23.0    10392\n",
-      "31.0     1585\n",
-      "32.0     2505\n",
-      "33.0     4748\n",
-      "41.0     7617\n",
-      "42.0       27\n",
-      "44.0    14876\n",
-      "45.0     4011\n",
-      "48.0     2558\n",
-      "49.0     1018\n",
-      "51.0     1362\n",
-      "52.0     4088\n",
-      "53.0     4635\n",
-      "54.0    12302\n",
-      "55.0      558\n",
-      "56.0     5306\n",
-      "61.0     4220\n",
-      "62.0    12136\n",
-      "71.0     2542\n",
-      "72.0    10774\n",
-      "81.0    14893\n",
-      "91.0      687\n",
-      "99.0        1\n",
-      "Name: province, dtype: int64\n",
-      "Total NAICS count per province \n",
-      "NAICS_total\n",
-      "0.0         110\n",
+      "AB     2613\n",
+      "BC    30725\n",
+      "MB      158\n",
+      "NB       31\n",
+      "NL       28\n",
+      "NS       35\n",
+      "NT       99\n",
+      "NU       48\n",
+      "ON    74722\n",
+      "PE        3\n",
+      "SK      110\n",
+      "YT        6\n",
+      "Name: source_NAICS_primary, dtype: int64\n",
+      "given NAICS count by Province \n",
+      "source_NAICS_primary\n",
+      "0.0         111\n",
       "1.0          16\n",
-      "11.0       1214\n",
-      "21.0       1080\n",
-      "22.0        175\n",
-      "23.0      60697\n",
-      "31.0       6447\n",
-      "32.0       2505\n",
-      "33.0       4748\n",
-      "41.0      13812\n",
-      "42.0         27\n",
-      "44.0      73641\n",
-      "45.0       4011\n",
-      "48.0       5054\n",
-      "49.0       1018\n",
-      "51.0       3775\n",
-      "52.0       8544\n",
-      "53.0      17496\n",
-      "54.0      34810\n",
-      "55.0       1522\n",
-      "56.0      12021\n",
-      "61.0       9549\n",
-      "62.0      21635\n",
-      "71.0       7078\n",
-      "72.0      49281\n",
-      "81.0      47860\n",
-      "91.0      14312\n",
-      "99.0          1\n",
-      "3199.0        1\n",
-      "7799.0        1\n",
+      "11.0         11\n",
+      "21.0          5\n",
+      "22.0          3\n",
+      "           ... \n",
+      "913190.0      2\n",
+      "913910.0     87\n",
+      "914110.0     19\n",
+      "919110.0      3\n",
+      "999999.0      1\n",
+      "Name: province, Length: 1847, dtype: int64\n",
+      "Total NAICS count per province \n",
+      "derived_NAICS\n",
+      "0.0       111\n",
+      "1.0        16\n",
+      "11.0     1056\n",
+      "21.0      627\n",
+      "22.0      160\n",
+      "23.0    52167\n",
+      "31.0     5846\n",
+      "32.0     2387\n",
+      "33.0     4529\n",
+      "41.0    12104\n",
+      "42.0       15\n",
+      "44.0    72464\n",
+      "45.0     3639\n",
+      "48.0     4934\n",
+      "49.0     1013\n",
+      "51.0     2026\n",
+      "52.0     7020\n",
+      "53.0    21867\n",
+      "54.0    25080\n",
+      "55.0     1083\n",
+      "56.0     9179\n",
+      "61.0     8154\n",
+      "62.0    18087\n",
+      "71.0     6667\n",
+      "72.0    79873\n",
+      "81.0    42640\n",
+      "91.0    13380\n",
+      "99.0        1\n",
       "Name: province, dtype: int64\n"
      ]
     }
@@ -147,23 +123,34 @@
     "import math\n",
     "\n",
     "\n",
-    "data = pd.read_csv('/home/jovyan/ODBiz/9-Analysis/1PLA.csv', low_memory=False)\n",
+    "data = pd.read_csv('/home/jovyan/ODBiz/8-Cleaning/ODBiz_Final.csv', low_memory=False)\n",
     "\n",
     "\n",
     "\n",
-    "\n",
-    "\n",
-    "# how many total rows there are\n",
+    "# how many total rows there are in the dataset\n",
     "count_unique_idx = data['idx'].nunique()     \n",
     "print(f'There are a total of {count_unique_idx} unique rows in this dataset')\n",
     "\n",
     "\n",
     "\n",
-    "#how many total unique rows in naics_group\n",
-    "count_unique_naics = data['NAICS_total'].nunique()   \n",
-    "print(f'There are a total of {count_unique_naics} unique rows in NAICS_Total')\n",
+    "#how many NAICS entries do we have in total \n",
+    "count_unique_naics = data['derived_NAICS'].count()   \n",
+    "print(f'There are a total of {count_unique_naics} rows in derived_NAICS')\n",
     "\n",
     "\n",
+    "#how many NAICS entries were gviven to us \n",
+    "count_unique_naics = data['source_NAICS_primary'].count()   \n",
+    "print(f'There are a total of {count_unique_naics} rows in source_NAICS_primary')\n",
+    "\n",
+    "\n",
+    "#how many NAICS codes we found \n",
+    "diff = data['derived_NAICS'].count() - data['source_NAICS_primary'].count()\n",
+    "print(f'That means that we found a total of {diff} NAICS codes ourselves')\n",
+    "\n",
+    "\n",
+    "#how many NAICS codes are missing\n",
+    "diff_2 = data['idx'].nunique() -  data['derived_NAICS'].count() \n",
+    "print(f'That means that we are missing a total of {diff_2} NAICS codes')\n",
     "\n",
     "\n",
     "#how many total businesses by province\n",
@@ -174,32 +161,32 @@
     "\n",
     "\n",
     "\n",
-    "#how many provinces by naics groups (this is Total NAICS)\n",
-    "group_prov_naics = data.groupby('province')['NAICS_total'].count() \n",
-    "print('How many NAICS_total in each province')\n",
+    "#how many provinces by naics groups (this is Total NAICS(derived_NAICS))\n",
+    "group_prov_naics = data.groupby('province')['derived_NAICS'].count() \n",
+    "print('How many total NAICS in each province')\n",
     "print(group_prov_naics)\n",
     "\n",
     "\n",
     "\n",
     "\n",
     "\n",
-    "#how many provinces by naics (this is Accurate NAICS)\n",
-    "group_naics =data.groupby('province')['NAICS'].count()\n",
-    "print('how many Accurate NAICS in each Province ')\n",
+    "#how many provinces by naics (this is Accurate NAICS(source_NAICS_primary))\n",
+    "group_naics =data.groupby('province')['source_NAICS_primary'].count()\n",
+    "print('how many given NAICS in each Province ')\n",
     "print(group_naics)\n",
     "\n",
     "\n",
     "\n",
-    "# How many Accurate NAICS codes by province\n",
-    "group_naics_prov =data.groupby('NAICS')['province'].count()\n",
-    "print('Accurate NAICS count by Province ')\n",
+    "# How many given NAICS codes by province\n",
+    "group_naics_prov =data.groupby('source_NAICS_primary')['province'].count()\n",
+    "print('given NAICS count by Province ')\n",
     "print(group_naics_prov)\n",
     "\n",
     "\n",
     "\n",
     "\n",
     "# How many Total NAICS codes by province\n",
-    "group_naics_group_prov =data.groupby('NAICS_total')['province'].count()\n",
+    "group_naics_group_prov =data.groupby('derived_NAICS')['province'].count()\n",
     "print('Total NAICS count per province ')\n",
     "print(group_naics_group_prov)\n"
    ]
@@ -336,7 +323,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
